Closed
Bug 51076
Opened 25 years ago
Closed 25 years ago
crash when subscribing to news server with categories
Categories
(SeaMonkey :: MailNews: Message Display, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: sspitzer, Assigned: sspitzer)
References
Details
(Keywords: crash)
karen found this when trying to reproduce bug #37673
here's the stack trace:
nsNNTPHost::getFolderFor(nsINNTPNewsgroup * 0x01d76ca0) line 2632 + 25 bytes
nsNNTPHost::SetIsCategoryContainer(const char * 0x067ec320, int 1,
nsMsgGroupRecord * 0x067e9dc0) line 1761 + 9 bytes
nsNNTPHost::AddNewNewsgroup(nsNNTPHost * const 0x06720080, const char *
0x067ec320, int 22, int 3, const char * 0x0012d996, int 1) line 2527
nsNNTPProtocol::ListXActiveResponse(nsIInputStream * 0x067251a0, unsigned int
591) line 4360
nsNNTPProtocol::ProcessProtocolState(nsIURI * 0x06713084, nsIInputStream *
0x067251a0, unsigned int 907, unsigned int 591) line 4890 + 19 bytes
nsMsgProtocol::OnDataAvailable(nsMsgProtocol * const 0x06716e78, nsIChannel *
0x06716664, nsISupports * 0x06713080, nsIInputStream * 0x067251a0, unsigned int
907, unsigned int 591) line 192 + 32 bytes
nsOnDataAvailableEvent::HandleEvent(nsOnDataAvailableEvent * const 0x067eaf60)
line 400 + 47 bytes
nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x067ed970) line 97 + 12 bytes
PL_HandleEvent(PLEvent * 0x067ed970) line 589 + 10 bytes
PL_ProcessPendingEvents(PLEventQueue * 0x05756bf0) line 526 + 9 bytes
_md_EventReceiverProc(HWND__ * 0x023e03e2, unsigned int 49424, unsigned int 0,
long 91581424) line 1059 + 9 bytes
USER32! 77e71820()
05756bf0()
working on the fix right now.
| Assignee | ||
Comment 1•25 years ago
|
||
accepting. marking p1, since it is a reproducable crasher against our Netscape
news server.
Status: NEW → ASSIGNED
Priority: P3 → P1
Comment 2•25 years ago
|
||
Adding crash and nsbeta3 since problem is reproducable and occurring on today's
build. QA->me
| Assignee | ||
Comment 3•25 years ago
|
||
fix checked in. r=mscott
the problem is we were executing some category code that is not ready for prime
time. since we don't support categories in 6.0, I just #ifdefed it out.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 4•25 years ago
|
||
Just for the stupid people:
What are "newsgroup categories"? Part of the specs or some internal
mozilla/netscape thingy?
categories were a feature supported in Communicator 4.x and the Collabra News
Server. You could have a newsgroup and then define/break it further by creating
categories which display in a "pretty name" (ie. instead of netscape.test, it
may show "Netscape's Test Forum")
Comment 6•25 years ago
|
||
No crash anymore when subscribing to news server with categories.
Verify on Linux 09-06-08-M18 commercial build
WinNT 09-06-08-M18 commercial build
Mac 09-06-04-M18 commercial build
Marking as verified!!
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
Component: MailNews: Subscribe → MailNews: Message Display
QA Contact: huang → search
You need to log in
before you can comment on or make changes to this bug.
Description
•