fix for crasher bug #51076.  the old category code is not ready for prime time, commenting it out. mozilla 6.0 doesn't support new categories.  r=mscott